k8s/00-namespace-serviceaccount.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fraud-inference
  labels:
    purpose: ml-inference
